# European-Inflation-Dynamics-UZH

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
data/interim/: countries-using-EUR.csv  countries-using-EUR.ftr  countries-with-inflation-data.ftr  countries-with-long-lat-data.ftr  european-currencies-unique.csv  european-currencies-unique.ftr  inflation-data-clean.ftr
european_inflation_dynamics/: __init__.py  config.py  dataset.py  features.py  plots.py
european_inflation_dynamics/modeling/: predict.py  train.py
notebooks/: 0.01-lte-european-currencies-wikipeadia-1.ipynb  0.02-lte-oced-european-inflation-rates-1.ipynb  0.03-lka-all-countries-longitude-latitude-1.ipynb  1.01-lte-european-currencies-wikipeadia-1.ipynb  1.02-lte-oced-european-inflation-rates-1.ipynb  1.03-lka-european-countries-longitude-latitude-1.ipynb  3.01-vle-linear-model-1.ipynb  3.01-vle-linear-models-1.ipynb
reports/: final-report.ipynb
text/paper/: citations.bib  report.out  report.tex  report.toc
text/presentation/: citations.bib  presentation.bbl  presentation.bcf  presentation.blg  presentation.run.xml  presentation.tex  report.blg
