[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "european_inflation_dynamics"
version = "0.0.1"
description = "Project for UZH course Digital Tools for Finance. We are analysing European Inflation Dynamics."
authors = [
  { name = "Liam Tessendorf" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["european_inflation_dynamics"]
force_sort_within_sections = true
